--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start-dev": "webpack-dev-server",
     "start": "node server",
     "build": "webpack -w",
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "devstart": "nodemon server"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +19,8 @@
     "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.1",
+    "dotenv": "^8.2.0",
+    "nodemon": "^2.0.2",
     "style-loader": "^1.1.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
@@ -30,7 +33,6 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "morgan": "^1.9.1",
-    "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
     "pg": "^7.17.0",
