--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
   "presets": ["@babel/preset-react", "@babel/preset-env"]
 }
+
+// [
+//   "env",
+//   {
+//     "targets": {
+//       "browsers": ["last 2 versions"]
+//     }
+//   }
+// ]
